cmss/main/default/objects/LoanAssurance__c/LoanAssurance__c.object-meta.xml
<CustomObject>
    <description>Zajištění smlouvy - pro úvěrový případ</description>
    <label>Loan Assurance</label>
    <nameField>
        <label>Loan Assurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Assurances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>