cmss/main/default/objects/LoanAssurance__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Smlouva</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Loan Assurances</relationshipLabel>
    <relationshipName>Loan_Assurances</relationshipName>
    <type>Lookup</type>
</CustomField>