cmss/main/default/objects/LoanAssurance__c/fields/Assurance_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Assurance_Subtype__c</fullName>
    <description>Podtyp zajištění</description>
    <label>Assurance Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10001</fullName>
            </value>
            <value>
                <fullName>110001</fullName>
            </value>
            <value>
                <fullName>150001</fullName>
            </value>
            <value>
                <fullName>150002</fullName>
            </value>
            <value>
                <fullName>180002</fullName>
            </value>
            <value>
                <fullName>180003</fullName>
            </value>
            <value>
                <fullName>20001</fullName>
            </value>
            <value>
                <fullName>210001</fullName>
            </value>
            <value>
                <fullName>230001</fullName>
            </value>
            <value>
                <fullName>250001</fullName>
            </value>
            <value>
                <fullName>290001</fullName>
            </value>
            <value>
                <fullName>290002</fullName>
            </value>
            <value>
                <fullName>290003</fullName>
            </value>
            <value>
                <fullName>310001</fullName>
            </value>
            <value>
                <fullName>350001</fullName>
            </value>
            <value>
                <fullName>360001</fullName>
            </value>
            <value>
                <fullName>370001</fullName>
            </value>
            <value>
                <fullName>3700010</fullName>
            </value>
            <value>
                <fullName>3700012</fullName>
            </value>
            <value>
                <fullName>3700013</fullName>
            </value>
            <value>
                <fullName>3700014</fullName>
            </value>
            <value>
                <fullName>3700015</fullName>
            </value>
            <value>
                <fullName>3700016</fullName>
            </value>
            <value>
                <fullName>370003</fullName>
            </value>
            <value>
                <fullName>370004</fullName>
            </value>
            <value>
                <fullName>370006</fullName>
            </value>
            <value>
                <fullName>370007</fullName>
            </value>
            <value>
                <fullName>370009</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>