cmss/main/default/objects/LoanAssurance__c/fields/AssuranceValue__c.field-meta.xml
<CustomField>
    <fullName>AssuranceValue__c</fullName>
    <description>Hodnota zajištění</description>
    <label>AssuranceValue</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>