cmss/main/default/objects/LoanAssurance__c/fields/Reinsurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Reinsurance_Type__c</fullName>
    <description>Typ zajištění</description>
    <label>Reinsurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>11</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>23</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>31</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>37</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>