cmss/main/default/objects/LoanAssurance__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>Datum platnosti do</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>